--- a/WebApp/client/public/receiver/css/style.css
+++ b/WebApp/client/public/receiver/css/style.css
@@ -3,7 +3,9 @@ body {
 }
 
 #player {
-  position: relative;
+  position: absolute;
+  width: 100%;
+  height: 100%;
   top: 0;
   right: 0;
   bottom: 0;
