--- a/WebApp/client/public/bidirectional/css/style.css
+++ b/WebApp/client/public/bidirectional/css/style.css
@@ -28,7 +28,8 @@ div#preview {
 div#preview>div {
   display: inline-block;
   vertical-align: top;
-  width: calc(50% - 20px);
+  width: 100%;
+  height: auto;
 }
 
 div#connectionId {
@@ -47,8 +48,4 @@ textarea {
   height: 1.3em;
   line-height: 1.3;
   vertical-align: middle;
-}
-
-video {
-  height: 225px;
 }
